# BigRAG-Cinema

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
conf/: bench_all_beauty.yaml  bench_digital_music.yaml  bench_video_games.yaml  experiment_config.yaml  logging.yaml  spark_defaults.conf
conf/cluster_profiles/: cluster_full.yaml  local.yaml  slurm_node.yaml
docs/report/: references.bib
notebooks/: 01_data_exploration.ipynb  02_embedding_generation.ipynb  03_strategy_prototyping.ipynb  04_results_analysis.ipynb  05_visualizations.ipynb
results/: recall_results.json
results/tables/: all_tables.aux  all_tables.tex  benchmark_summary.md  benchmark_summary.tex  table_cross_dataset.tex  table_dataset_summary.tex  table_detail_arts_crafts_and_sewing.tex  table_percentiles_arts_crafts_and_sewing.tex  table_recall.tex  table_scalability.tex  table_speedup.tex  table_winners.tex
scripts/: compute_recall.py  download_dataset.py  download_hf_data.py  generate_embeddings.py  generate_plots.py  generate_tables.py  prepare_parquet.py  run_all_benchmarks.sh  run_benchmarks.py  run_full_pipeline.sh
scripts/cluster/: 01_generate_embeddings.sh  02_prepare_parquet.sh  03_run_benchmark.sh  04_generate_plots.sh  bench_all.sh  chunked_embed.py  chunked_parquet.py  download_data.sh  embed_all.sh  generate_bench_configs.py  parquet_all.sh  setup_env.sh  submit_all.sh
src/bigrag/: __init__.py
tests/: __init__.py  conftest.py  test_data_pipeline.py  test_metadata_filter.py  test_metrics_collector.py  test_vector_search.py  test_workload_generator.py
(+47 files in other folders)
