[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigrag-cinema"
version = "0.1.0"
description = "PySpark-based hybrid query execution benchmark for RAG workloads"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.5",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
